--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,19 @@
 <resources>
 
+    <style name="BtnStyle" parent="TextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/red</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/distance_view</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/title_size</item>
+    </style>
+
+
+    <style name="LineVerGreen">
+        <item name="android:layout_width">4dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:background">@color/status_color</item>
+    </style>
+
 </resources>
