+好作文代码上传

--- a/app/src/main/res/layout/item_lv_article.xml
+++ b/app/src/main/res/layout/item_lv_article.xml
@@ -40,18 +40,22 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tvContent"
                 style="@style/TextStyle"
                 android:layout_marginTop="@dimen/distance_text"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的..." />
-
+                android:text="我的理想十分奇特，但我十分喜欢。我的理想是当图书馆里的图书管理员。虽然你可能会问为什么，但我觉得，喜欢就是喜欢，没有什么太深的含义。在一个安静的环境下工作，不是挺好的..."
+                android:visibility="visible" />
 
             <ImageView
+                android:id="@+id/ivImage"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@mipmap/default_image_rect"
-                android:visibility="gone" />
+                android:layout_height="180dp"
+                android:layout_marginTop="@dimen/distance_divider"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/img2"
+                android:visibility="visible" />
         </LinearLayout>
 
     </LinearLayout>
