--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,10 +22,25 @@
         <item name="android:layout_marginRight">30dp</item>
         <item name="android:background">@drawable/bg_btn_round</item>
         <item name="android:gravity">center</item>
-        <item name="android:paddingBottom">10dp</item>
-        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingTop">8dp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="BtnTagStyle" parent="TextStyle">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:background">@drawable/bg_tag_red</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingBottom">3dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/title_size</item>
+    </style>
+
+    <style name="LineOrange" parent="Line">
+        <item name="android:background">#F77F7A</item>
+        <item name="android:layout_height">1dp</item>
     </style>
 
 </resources>
