--- a/lib_zuowen/src/main/res/values/colors_znz.xml
+++ b/lib_zuowen/src/main/res/values/colors_znz.xml
@@ -7,7 +7,7 @@
     <color name="status_color">#038B87</color>
 
     <!--基础色值-->
-    <color name="red">#EC1B36</color>
+    <color name="red">#E77D7C</color>
     <color name="orange">#FF8F40</color>
     <color name="blue">#4CAAFF</color>
     <color name="yellow">#FFF7D23E</color>
