--- a/app/src/main/res/layout/act_register.xml
+++ b/app/src/main/res/layout/act_register.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/include_common_navigation"
-        android:visibility="gone" />
+    <include layout="@layout/include_common_navigation" />
 
     <include layout="@layout/include_common_remind" />
+
+    <include layout="@layout/include_common_network_status" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +58,55 @@
                     android:textSize="@dimen/title_size" />
             </LinearLayout>
 
-            <View style="@style/Line" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/btn_height"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_btn_boder"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/distance_divider"
+                        android:src="@mipmap/ic_launcher" />
+
+                    <EditText
+                        style="@style/EditSingleStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="验证码"
+                        android:inputType="number"
+                        android:paddingRight="@dimen/distance_view"
+                        android:textSize="@dimen/title_size" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="100dp"
+                    android:layout_height="@dimen/btn_height"
+                    android:layout_marginLeft="@dimen/distance_divider"
+                    android:background="@drawable/bg_btn_boder"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:text="验证"
+                        android:textColor="@color/green" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -88,37 +137,19 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvLogin"
+            android:id="@+id/tvSubmit"
             style="@style/BtnRoundStyle"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
-            android:text="登录"
+            android:text="注册"
             android:textColor="@color/white" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="@dimen/distance_view"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvRegister"
-                style="@style/TextGrayStyle"
-                android:layout_width="wrap_content"
-                android:text="立即注册" />
-
-            <View style="@style/WeightView" />
-
-            <TextView
-                android:id="@+id/tvForgetPsd"
-                style="@style/TextGrayStyle"
-                android:layout_width="wrap_content"
-                android:text="忘记密码?" />
-
-        </LinearLayout>
+        <TextView
+            style="@style/TextGrayStyle"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="@dimen/distance_divider"
+            android:text="点击注册，代表您已阅读并同意用户使用协议" />
 
         <View style="@style/WeightView" />
 
