--- a/lib_zuowen/src/main/res/values/colors_znz.xml
+++ b/lib_zuowen/src/main/res/values/colors_znz.xml
@@ -14,7 +14,7 @@
     <color name="green">#7ED321</color>
     <color name="gray">#aaaaaa</color>
     <color name="black">#000000</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
     <color name="trans">#00000000</color>
     <color name="dark">#8000</color>
     <color name="pink">#FF6489</color>
