+好作文代码上传

--- a/app/src/main/res/layout/act_register.xml
+++ b/app/src/main/res/layout/act_register.xml
@@ -91,6 +91,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/llSendCode"
                     android:layout_width="100dp"
                     android:layout_height="@dimen/btn_height"
                     android:layout_marginLeft="@dimen/distance_divider"
