--- a/app/src/main/res/layout/header_home.xml
+++ b/app/src/main/res/layout/header_home.xml
@@ -40,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#DEF6E0"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
@@ -65,7 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#FEE4E0"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
@@ -90,7 +92,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#CCE7FE"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
@@ -114,7 +117,7 @@
             android:layout_marginLeft="@dimen/distance_view"
             android:layout_marginRight="@dimen/distance_view"
             android:layout_marginTop="@dimen/distance_view"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -123,7 +126,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#FEF2DC"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
@@ -148,7 +152,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#E1E0FE"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view">
 
@@ -172,7 +177,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#DEF6E0"
-                android:gravity="center_horizontal"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/distance_view"
                 android:visibility="invisible">
