--- a/app/src/main/res/layout/item_lv_video.xml
+++ b/app/src/main/res/layout/item_lv_video.xml
@@ -23,7 +23,7 @@
                 android:layout_width="120dp"
                 android:layout_height="100dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/default_image_rect" />
+                android:src="@mipmap/img3" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
