--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include
@@ -54,7 +55,7 @@
                     android:layout_height="match_parent"
                     android:hint="手机号/用户名"
                     android:paddingRight="@dimen/distance_view"
-                    android:textSize="@dimen/title_size" />
+                    android:textSize="@dimen/text_size" />
             </LinearLayout>
 
             <View style="@style/Line" />
@@ -74,15 +75,14 @@
                     android:padding="@dimen/distance_divider"
                     android:src="@mipmap/ic_launcher" />
 
-                <EditText
+                <com.znz.compass.znzlibray.views.EditTextWithDel
                     android:id="@+id/etPsd"
                     style="@style/EditPasswordStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:hint="密码"
-                    android:paddingRight="@dimen/distance_view"
-                    android:textSize="@dimen/title_size" />
+                    android:paddingRight="@dimen/distance_view" />
 
             </LinearLayout>
         </LinearLayout>
