--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 
     <style name="BtnTagStyle" parent="TextStyle">
@@ -40,6 +41,17 @@
     <style name="LineOrange" parent="Line">
         <item name="android:background">#F77F7A</item>
         <item name="android:layout_height">1dp</item>
+    </style>
+
+
+    <style name="EditRoundStyle" parent="EditSingleStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/btn_height</item>
+        <item name="android:background">@drawable/bg_btn_boder</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:textSize">@dimen/text_size</item>
     </style>
 
 </resources>
