--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,15 @@
         <item name="android:textSize">@dimen/text_size</item>
     </style>
 
+    <style name="RadioStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@null</item>
+        <item name="android:button">@null</item>
+        <item name="android:drawablePadding">@dimen/distance_divider</item>
+        <item name="android:drawableRight">@drawable/bg_cb_select</item>
+        <item name="android:padding">@dimen/distance_view</item>
+        <item name="android:textSize">@dimen/title_size</item>
+    </style>
+
 </resources>
