--- a/app/src/main/res/layout/act_mine_class.xml
+++ b/app/src/main/res/layout/act_mine_class.xml
@@ -13,8 +13,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_view">
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/TitleTextStyle"
+            android:padding="@dimen/distance_view"
+            android:text="会员套餐" />
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -22,23 +26,55 @@
 
             <RadioButton
                 style="@style/RadioStyle"
-                android:drawableLeft="@mipmap/rder_icon_alipay"
-                android:text="支付宝支付" />
+                android:text="2课时 10元" />
 
-            <View
-                style="@style/Line"
-                android:layout_marginLeft="@dimen/distance_view" />
+            <View style="@style/Line" />
 
             <RadioButton
                 style="@style/RadioStyle"
-                android:drawableLeft="@mipmap/rder_icon_wechat"
-                android:text="微信支付" />
+                android:text="2课时 10元" />
 
-            <View
-                style="@style/Line"
-                android:layout_marginLeft="@dimen/distance_view" />
+            <View style="@style/Line" />
+
+            <RadioButton
+                style="@style/RadioStyle"
+                android:text="2课时 10元" />
+
+            <View style="@style/Line" />
+
+            <RadioButton
+                style="@style/RadioStyle"
+                android:text="2课时 10元" />
+
+            <View style="@style/Line" />
+
+            <RadioButton
+                style="@style/RadioStyle"
+                android:text="2课时 10元" />
+
+            <View style="@style/Line" />
+
+            <RadioButton
+                style="@style/RadioStyle"
+                android:text="2课时 10元" />
+
+            <View style="@style/Line" />
+
+            <RadioButton
+                style="@style/RadioStyle"
+                android:text="2课时 10元" />
+
+            <View style="@style/Line" />
+
+
         </RadioGroup>
 
+        <TextView
+            style="@style/BtnRoundStyle"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:text="购买课时" />
     </LinearLayout>
 
 </LinearLayout>
