--- a/app/src/main/res/drawable/tab_main_1.xml
+++ b/app/src/main/res/drawable/tab_main_1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/shouye_hui" android:state_checked="false" /><!--选中时效果-->
-    <item android:drawable="@mipmap/shouye" android:state_checked="true" /><!--未选中时效果-->
+    <item android:drawable="@mipmap/icon_shouyehui" android:state_checked="false" /><!--选中时效果-->
+    <item android:drawable="@mipmap/icon_shouye" android:state_checked="true" /><!--未选中时效果-->
 </selector>
