--- a/app/src/main/res/layout/frag_mine.xml
+++ b/app/src/main/res/layout/frag_mine.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/include_common_navigation" />
+    <include
+        layout="@layout/include_common_navigation"
+        android:visibility="gone" />
 
     <include layout="@layout/include_common_remind" />
 
@@ -24,8 +26,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:background="@color/white"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="@dimen/distance_view">
 
                 <com.znz.compass.znzlibray.views.imageloder.HttpImageView
                     android:id="@+id/ivUserHeader"
@@ -33,10 +36,30 @@
                     android:layout_height="wrap_content"
                     android:src="@mipmap/dfthead2" />
 
-                <TextView
-                    style="@style/TitleTextStyle"
-                    android:layout_marginTop="@dimen/distance_view"
-                    android:text="张三" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/distance_view"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:text="张三" />
+
+                    <TextView
+                        style="@style/TextWhiteStyle"
+                        android:layout_marginTop="@dimen/distance_divider"
+                        android:background="@mipmap/icon_jifen"
+                        android:gravity="center"
+                        android:paddingLeft="12dp"
+                        android:paddingTop="1dp"
+                        android:text="VIP1"
+                        android:textSize="@dimen/text_small_size" />
+
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
