--- a/app/src/main/res/layout/item_lv_article.xml
+++ b/app/src/main/res/layout/item_lv_article.xml
@@ -18,26 +18,48 @@
             android:orientation="vertical"
             android:padding="@dimen/distance_view">
 
-            <TextView
-                style="@style/TitleTextStyle"
-                android:text="我的理想"
-                android:textStyle="bold" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/distance_text"
                 android:orientation="horizontal">
 
-                <TextView
-                    style="@style/TextGrayStyle"
-                    android:text="议论文" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    style="@style/TextGrayStyle"
-                    android:layout_marginLeft="@dimen/distance_view"
-                    android:text="674字" />
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:text="我的理想"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/distance_text"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            style="@style/TextGrayStyle"
+                            android:text="议论文" />
+
+                        <TextView
+                            style="@style/TextGrayStyle"
+                            android:layout_marginLeft="@dimen/distance_view"
+                            android:text="674字" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/ivGood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_youxiu"
+                    android:visibility="gone" />
+
             </LinearLayout>
+
 
             <TextView
                 android:id="@+id/tvContent"
@@ -60,5 +82,5 @@
 
     </LinearLayout>
 
-    <View style="@style/Line" />
+    <View style="@style/LineDividerNoTop" />
 </LinearLayout>
