--- a/lib_zuowen/src/main/res/color/tab_text.xml
+++ b/lib_zuowen/src/main/res/color/tab_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/text_color" android:state_checked="false" />
-    <item android:color="#7ED321" android:state_checked="true" />
+    <item android:color="#30BB9C" android:state_checked="true" />
 </selector>
