--- a/app/src/main/res/layout/act_article_subject.xml
+++ b/app/src/main/res/layout/act_article_subject.xml
@@ -49,6 +49,7 @@
 
 
     <TextView
+        android:id="@+id/tvSubmit"
         style="@style/BtnRoundStyle"
         android:layout_marginTop="30dp"
         android:text="我要挑战" />
