--- a/app/src/main/res/layout/act_article_upload.xml
+++ b/app/src/main/res/layout/act_article_upload.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
 
     <include layout="@layout/include_common_navigation" />
@@ -10,12 +11,85 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_view">
+        android:layout_height="wrap_content">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/distance_view">
+
+                    <TextView
+                        style="@style/TitleGrayTextStyle"
+                        android:text="选择老师" />
+
+                    <View style="@style/WeightView" />
+
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:drawableRight="@mipmap/icon_xiala"
+                        android:text="李老师" />
+                </LinearLayout>
+
+                <View style="@style/LineDivider" />
+
+                <com.znz.compass.znzlibray.views.EditTextWithDel
+                    style="@style/EditSingleStyle"
+                    android:layout_width="match_parent"
+                    android:hint="请输入作文题目"
+                    android:padding="@dimen/distance_view"
+                    android:textSize="@dimen/title_size" />
+
+                <View style="@style/Line" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:id="@+id/llAdd"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_margin="@dimen/distance_view"
+                    android:background="#B2B2B2"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/icon_tianjiazhaopian" />
+
+                    <TextView
+                        style="@style/TextWhiteStyle"
+                        android:layout_marginTop="@dimen/distance_divider"
+                        android:text="添加照片" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvSubmit"
+                style="@style/BtnRoundStyle"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:text="上传" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
