--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -45,8 +45,9 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/distance_divider"
                     android:padding="@dimen/distance_divider"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/icon_shouji" />
 
                 <com.znz.compass.znzlibray.views.EditTextWithDel
                     android:id="@+id/etUserName"
@@ -72,8 +73,9 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/distance_divider"
                     android:padding="@dimen/distance_divider"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/icon_suo" />
 
                 <com.znz.compass.znzlibray.views.EditTextWithDel
                     android:id="@+id/etPsd"
