--- a/app/src/main/res/layout/act_pay_success.xml
+++ b/app/src/main/res/layout/act_pay_success.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/white"
+        android:background="@mipmap/bg"
         android:gravity="center"
         android:orientation="vertical">
 
