--- a/app/src/main/res/layout/act_update_psd.xml
+++ b/app/src/main/res/layout/act_update_psd.xml
@@ -22,39 +22,21 @@
         android:paddingRight="30dp"
         android:paddingTop="@dimen/distance_view">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <com.znz.compass.znzlibray.views.EditTextWithDel
-                style="@style/EditRoundStyle"
-                android:layout_weight="1"
-                android:hint="验证码"
-                android:inputType="number" />
-
-            <LinearLayout
-                android:id="@+id/llSendCode"
-                android:layout_width="100dp"
-                android:layout_height="@dimen/btn_height"
-                android:layout_marginLeft="@dimen/distance_divider"
-                android:background="@drawable/bg_btn_boder"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvSendCode"
-                    style="@style/TextGrayStyle"
-                    android:text="验证" />
-
-            </LinearLayout>
-        </LinearLayout>
+        <com.znz.compass.znzlibray.views.EditTextWithDel
+            style="@style/EditRoundStyle"
+            android:hint="输入旧密码"
+            android:inputType="textPassword" />
 
         <com.znz.compass.znzlibray.views.EditTextWithDel
             style="@style/EditRoundStyle"
             android:layout_marginTop="20dp"
-            android:layout_weight="1"
-            android:hint="请输入新密码"
+            android:hint="输入新密码"
+            android:inputType="textPassword" />
+
+        <com.znz.compass.znzlibray.views.EditTextWithDel
+            style="@style/EditRoundStyle"
+            android:layout_marginTop="20dp"
+            android:hint="确认新密码"
             android:inputType="textPassword" />
 
         <TextView
@@ -63,7 +45,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="20dp"
-            android:text="确认"
+            android:text="确定"
             android:textColor="@color/white" />
     </LinearLayout>
 
