--- a/app/src/main/res/layout/popup_verify_code.xml
+++ b/app/src/main/res/layout/popup_verify_code.xml
@@ -31,6 +31,7 @@
                 android:layout_marginRight="@dimen/distance_view"
                 android:background="@drawable/bg_code_edit"
                 android:gravity="center"
+                android:hint="验证码"
                 android:inputType="number" />
 
             <ImageView
